--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,8 +17,9 @@
   align-items: center;
   justify-content: center;
   flex-wrap: nowrap;
-  min-height: 100vh;
   width: 100%;
+  height: 100vh;
+  max-height: var( --height, 100vh );
 }
 
 // player container
@@ -28,7 +29,7 @@
   position: relative;
   flex: 1;
   width: 100%;
-  height: 100vh;
+  height: var( --height, 100vh );
   background-color: $colorDocumentDark;
 
   & > .player-bg,
@@ -39,18 +40,21 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 0;
   }
   & > .player-bg {
     background-position: bottom right;
     background-repeat: no-repeat;
     background-size: cover;
     opacity: .4;
+    z-index: 1;
+  }
+  & > .player-canvas {
+    z-index: 2;
   }
   @media #{$screenMedium} {
     margin: 0 ( $padSpace * 2 );
     max-width: 1080px;
-    height: calc( 100vh - ( #{$padSpace} * 4 ) );
+    height: calc( var( --height, 100vh ) - ( #{$padSpace} * 4 ) );
     max-height: 700px;
     border-radius: $lineJoin;
     box-shadow: $shadowContainer;
@@ -64,6 +68,8 @@
   align-items: stretch;
   justify-content: stretch;
   height: 100%;
+  position: relative;
+  z-index: 3;
 
   .player-header,
   .player-content,
@@ -75,7 +81,7 @@
     padding: 0 $padSpace;
     height: $headerHeight;
     min-height: $headerHeight;
-    background-color: $colorCard;
+    // background-color: $colorCard;
   }
   .player-header {
     & > h2 {
