--- a/src/scss/document.scss
+++ b/src/scss/document.scss
@@ -3,7 +3,7 @@ html, body {
   display: block;
   position: relative;
   max-width: 100vw;
-  min-height: 100vh;
+  min-height: var( --height, 100vh );
 }
 html {
   overflow: hidden;
