--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -61,7 +61,7 @@
   margin: -.4em 0 0 0;
   border-radius: 50%;
   box-shadow: $shadowPaper;
-  background-color: $colorBright;
+  background-color: $colorBright !important;;
   transition: background $fxSpeed $fxEase;
   color: transparent !important;
   border-color: transparent !important;
@@ -69,6 +69,9 @@
   cursor: pointer;
   &:hover {
     background-color: darken( $colorBright, 20% );
+  }
+  &:focus, &:active {
+    box-shadow: $focusBox;
   }
 }
 .form-slider {
@@ -94,5 +97,9 @@
     &::-webkit-slider-thumb { -webkit-appearance: none; @include sliderThumb; }
     &::-moz-range-thumb { @include sliderThumb; }
     &::-ms-thumb { @include sliderThumb; }
+    // focus
+    &:focus::-webkit-slider-thumb { box-shadow: $focusBox; }
+    &:focus::-moz-range-thumb { box-shadow: $focusBox; }
+    &:focus::-ms-thumb { box-shadow: $focusBox; }
   }
 }
